@@ -1,6 +1,7 @@
 Changes in 23.2
 ===============
 	* killall: look at all namespaces by default
+	* killall: Fix -INT option parsing #11
 Changes in 23.1
 ===============
 	* killall: Remove debug output Debian: #864753
